<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/login_screen_padding"
        android:paddingVertical="@dimen/register_screen_vertical_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/login_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_subtitle_margin"
            android:gravity="center"
            android:text="@string/register_subtitle"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/login_subtitle_size" />

        <EditText
            android:id="@+id/editRegisterName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_field_height"
            android:layout_marginTop="@dimen/register_fields_margin"
            android:autofillHints="name"
            android:backgroundTint="@color/color_orange"
            android:hint="@string/register_name_hint"
            android:inputType="textPersonName|textCapWords"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_gray" />

        <EditText
            android:id="@+id/editRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_field_height"
            android:layout_marginTop="@dimen/login_field_spacing"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/color_orange"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_field_spacing"
            android:hint="@string/register_password_hint"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/color_gray"
            app:hintTextColor="@color/color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_field_height"
                android:autofillHints="newPassword"
                android:backgroundTint="@color/color_orange"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_field_spacing"
            android:hint="@string/register_repeat_password_hint"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/color_gray"
            app:hintTextColor="@color/color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRegisterRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_field_height"
                android:autofillHints="newPassword"
                android:backgroundTint="@color/color_orange"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/login_button_margin"
            android:backgroundTint="@color/color_orange"
            android:text="@string/register_action"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
