<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:padding="@dimen/login_screen_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/login_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_subtitle_margin"
            android:gravity="center"
            android:text="@string/login_subtitle"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/login_subtitle_size" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_field_height"
            android:layout_marginTop="@dimen/login_fields_margin"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/color_orange"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_field_spacing"
            android:hint="@string/login_password_hint"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/color_gray"
            app:hintTextColor="@color/color_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_field_height"
                android:autofillHints="password"
                android:backgroundTint="@color/color_orange"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/login_button_margin"
            android:backgroundTint="@color/color_orange"
            android:text="@string/login_action"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
